@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2025 DBeaver Corp and others
+ * Copyright (C) 2010-2026 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,10 +17,9 @@
 package org.jkiss.dbeaver.ui.dialogs.connection;
 
 import org.eclipse.jface.dialogs.IDialogConstants;
+import org.eclipse.jface.layout.GridDataFactory;
 import org.eclipse.osgi.util.NLS;
 import org.eclipse.swt.SWT;
-import org.eclipse.swt.events.SelectionAdapter;
-import org.eclipse.swt.events.SelectionEvent;
 import org.eclipse.swt.events.SelectionListener;
 import org.eclipse.swt.layout.GridData;
 import org.eclipse.swt.layout.GridLayout;
@@ -47,6 +46,7 @@ import org.jkiss.dbeaver.registry.DataSourceProviderRegistry;
 import org.jkiss.dbeaver.runtime.DBWorkbench;
 import org.jkiss.dbeaver.ui.BaseThemeSettings;
 import org.jkiss.dbeaver.ui.IHelpContextIds;
+import org.jkiss.dbeaver.ui.UIIcon;
 import org.jkiss.dbeaver.ui.UIUtils;
 import org.jkiss.dbeaver.ui.contentassist.ContentAssistUtils;
 import org.jkiss.dbeaver.ui.contentassist.SmartTextContentAdapter;
@@ -101,10 +101,9 @@ public class ConnectionPageGeneral extends ConnectionWizardPage implements Navig
     private List<DBPDataSourcePermission> accessRestrictions;
 
     private final List<FilterInfo> filters = new ArrayList<>();
-    private Group filtersGroup;
+    private Composite filtersGroup;
 
-    ConnectionPageGeneral(ConnectionWizard wizard)
-    {
+    ConnectionPageGeneral(ConnectionWizard wizard) {
         super(PAGE_NAME);
         this.wizard = wizard;
         setTitle(CoreMessages.dialog_connection_edit_wizard_general);
@@ -116,8 +115,7 @@ public class ConnectionPageGeneral extends ConnectionWizardPage implements Navig
         filters.add(new FilterInfo(DBSEntityAttribute.class, CoreMessages.dialog_connection_wizard_final_filter_attributes));
     }
 
-    ConnectionPageGeneral(ConnectionWizard wizard, DataSourceDescriptor dataSourceDescriptor)
-    {
+    ConnectionPageGeneral(ConnectionWizard wizard, DataSourceDescriptor dataSourceDescriptor) {
         this(wizard);
         this.dataSourceDescriptor = dataSourceDescriptor;
         this.accessRestrictions = dataSourceDescriptor.getModifyPermission();
@@ -141,18 +139,13 @@ public class ConnectionPageGeneral extends ConnectionWizardPage implements Navig
         }
     }
 
-    protected boolean wasActivated() {
-        return this.activated;
-    }
-
     @Override
     public void dispose() {
         super.dispose();
     }
 
     @Override
-    public void activatePage()
-    {
+    public void activatePage() {
         if (this.navigatorSettings == null) {
             this.navigatorSettings = new DataSourceNavigatorSettings(getWizard().getSelectedNavigatorSettings());
         }
@@ -238,7 +231,10 @@ public class ConnectionPageGeneral extends ConnectionWizardPage implements Navig
         filterInfo.link.setEnabled(enable);
         if (enable) {
             filterInfo.link.setText("<a>" + filterInfo.title + "</a>");
-            filterInfo.link.setToolTipText(NLS.bind(CoreMessages.dialog_connection_wizard_final_filter_link_tooltip, filterInfo.title));
+            filterInfo.link.setToolTipText(NLS.bind(
+                CoreMessages.dialog_connection_wizard_final_filter_link_tooltip,
+                filterInfo.title
+            ));
             if (filterInfo.filter != null && !filterInfo.filter.isNotApplicable()) {
                 filterInfo.link.setFont(BaseThemeSettings.instance.baseFontBold);
             } else {
@@ -246,7 +242,11 @@ public class ConnectionPageGeneral extends ConnectionWizardPage implements Navig
             }
         } else {
             //filterInfo.link.setText(NLS.bind(CoreMessages.dialog_connection_wizard_final_filter_link_not_supported_text, filterInfo.title));
-            filterInfo.link.setToolTipText(NLS.bind(CoreMessages.dialog_connection_wizard_final_filter_link_not_supported_tooltip, filterInfo.title, getWizard().getSelectedDriver().getName()));
+            filterInfo.link.setToolTipText(NLS.bind(
+                CoreMessages.dialog_connection_wizard_final_filter_link_not_supported_tooltip,
+                filterInfo.title,
+                getWizard().getSelectedDriver().getName()
+            ));
         }
     }
 
@@ -282,9 +282,10 @@ public class ConnectionPageGeneral extends ConnectionWizardPage implements Navig
     }
 
     @Override
-    public void deactivatePage()
-    {
-        saveSettings(dataSourceDescriptor);
+    public void deactivatePage() {
+        if (dataSourceDescriptor != null) {
+            saveSettings(dataSourceDescriptor);
+        }
     }
 
     @Override
@@ -297,10 +298,20 @@ public class ConnectionPageGeneral extends ConnectionWizardPage implements Navig
         Composite group = UIUtils.createComposite(parent, 1);
 
         {
-            Composite miscGroup = UIUtils.createControlGroup(group, CoreMessages.pref_page_ui_general_group_general, 2, GridData.FILL_HORIZONTAL, 0);
+            Composite miscGroup = UIUtils.createTitledComposite(
+                group,
+                CoreMessages.pref_page_ui_general_group_general,
+                2,
+                GridData.FILL_HORIZONTAL,
+                0
+            );
 
             String connectionName = dataSourceDescriptor == null ? "" : dataSourceDescriptor.getName(); //$NON-NLS-1$
-            connectionNameText = UIUtils.createLabelText(miscGroup, CoreMessages.dialog_connection_wizard_final_label_connection_name, CommonUtils.toString(connectionName));
+            connectionNameText = UIUtils.createLabelText(
+                miscGroup,
+                CoreMessages.dialog_connection_wizard_final_label_connection_name,
+                CommonUtils.toString(connectionName)
+            );
             UIUtils.setDefaultTextControlWidthHint(connectionNameText);
 
             connectionNameText.addModifyListener(e -> {
@@ -312,7 +323,9 @@ public class ConnectionPageGeneral extends ConnectionWizardPage implements Navig
             ContentAssistUtils.installContentProposal(
                 connectionNameText,
                 new SmartTextContentAdapter(),
-                new StringContentProposalProvider(Arrays.stream(ConnectionNameResolver.getConnectionVariables()).map(GeneralUtils::variablePattern).toArray(String[]::new))
+                new StringContentProposalProvider(
+                    Arrays.stream(ConnectionNameResolver.getConnectionVariables())
+                        .map(GeneralUtils::variablePattern).toArray(String[]::new))
             );
             UIUtils.setContentProposalToolTip(connectionNameText, "Connection name patterns",
                 ConnectionNameResolver.getConnectionVariables());
@@ -320,19 +333,23 @@ public class ConnectionPageGeneral extends ConnectionWizardPage implements Navig
             UIUtils.setDefaultTextControlWidthHint(descriptionText);
             {
                 connectionTypeCombo = createConnectionTypeCombo(miscGroup);
-                connectionTypeCombo.addSelectionListener(new SelectionAdapter() {
-                    @Override
-                    public void widgetSelected(SelectionEvent e) {
-                        DBPConnectionType type = connectionTypeCombo.getItem(connectionTypeCombo.getSelectionIndex());
-                        getWizard().firePropertyChangeEvent(ConnectionWizard.PROP_CONNECTION_TYPE, getActiveDataSource().getConnectionConfiguration().getConnectionType(), type);
-                    }
-                });
+                connectionTypeCombo.addSelectionListener(SelectionListener.widgetSelectedAdapter(selectionEvent -> {
+                    DBPConnectionType type = connectionTypeCombo.getItem(connectionTypeCombo.getSelectionIndex());
+                    getWizard().firePropertyChangeEvent(
+                        ConnectionWizard.PROP_CONNECTION_TYPE,
+                        getActiveDataSource().getConnectionConfiguration().getConnectionType(),
+                        type
+                    );
+                }));
 
                 Composite ctGroup = connectionTypeCombo.getParent();
                 ((GridLayout)ctGroup.getLayout()).numColumns++;
-                UIUtils.createDialogButton(ctGroup, CoreMessages.dialog_connection_wizard_final_label_connection_types_edit, new SelectionAdapter() {
-                    @Override
-                    public void widgetSelected(SelectionEvent e) {
+                UIUtils.createPushButton(
+                    ctGroup,
+                    null,
+                    CoreMessages.dialog_connection_wizard_final_label_connection_types_edit,
+                    UIIcon.CONFIGURATION,
+                    SelectionListener.widgetSelectedAdapter(selectionEvent -> {
                         DBPConnectionType curConType = connectionTypeCombo.getSelectedItem();
                         DataSourceDescriptor dataSource = getActiveDataSource();
                         UIUtils.showPreferencesFor(
@@ -341,12 +358,17 @@ public class ConnectionPageGeneral extends ConnectionWizardPage implements Navig
                             PrefPageConnectionTypes.PAGE_ID);
                         loadConnectionTypes(connectionTypeCombo);
                         if (!connectionTypeCombo.getItems().contains(curConType)) {
-                            curConType = connectionTypeCombo.getItems().get(0);
+                            curConType = connectionTypeCombo.getItems().getFirst();
                         }
-                        setConnectionType(connectionTypeCombo, curConType);
-                        getWizard().firePropertyChangeEvent(ConnectionWizard.PROP_CONNECTION_TYPE, curConType, curConType);
-                    }
-                });
+                        if (curConType != null) {
+                            setConnectionType(connectionTypeCombo, curConType);
+                        }
+                        getWizard().firePropertyChangeEvent(
+                            ConnectionWizard.PROP_CONNECTION_TYPE,
+                            curConType,
+                            curConType
+                        );
+                    }));
             }
 
             {
@@ -362,7 +384,7 @@ public class ConnectionPageGeneral extends ConnectionWizardPage implements Navig
 
         {
             // Security
-            Group securityGroup = UIUtils.createControlGroup(
+            Composite securityGroup = UIUtils.createTitledComposite(
                 refsGroup,
                 CoreMessages.dialog_connection_wizard_final_group_security,
                 1, GridData.VERTICAL_ALIGN_BEGINNING | GridData.HORIZONTAL_ALIGN_BEGINNING, 0);
@@ -376,25 +398,20 @@ public class ConnectionPageGeneral extends ConnectionWizardPage implements Navig
             UIUtils.createDialogButton(
                 securityGroup,
                 CoreMessages.pref_page_label_edit_permissions,
-                new SelectionAdapter() {
-                    @Override
-                    public void widgetSelected(SelectionEvent e) {
-                        editPermissions();
-                    }
-                }
-            );
+                SelectionListener.widgetSelectedAdapter(selectionEvent -> editPermissions()));
         }
 
         {
             // Filters
-            filtersGroup = UIUtils.createControlGroup(
+            filtersGroup = UIUtils.createTitledComposite(
                 refsGroup,
                 CoreMessages.dialog_connection_wizard_final_group_filters,
                 1, GridData.VERTICAL_ALIGN_BEGINNING | GridData.HORIZONTAL_ALIGN_BEGINNING, 0);
             for (final FilterInfo filterInfo : filters) {
-                filterInfo.link = UIUtils.createLink(filtersGroup, "<a>" + filterInfo.title + "</a>", new SelectionAdapter() {
-                    @Override
-                    public void widgetSelected(SelectionEvent e) {
+                filterInfo.link = UIUtils.createLink(
+                    filtersGroup,
+                    "<a>" + filterInfo.title + "</a>",
+                    SelectionListener.widgetSelectedAdapter(selectionEvent -> {
                         EditObjectFilterDialog dialog = new EditObjectFilterDialog(
                             getShell(),
                             getWizard().getDataSourceRegistry(),
@@ -409,15 +426,14 @@ public class ConnectionPageGeneral extends ConnectionWizardPage implements Navig
                                 filterInfo.link.setFont(getFont());
                             }
                         }
-                    }
-                });
+                    }));
                 filterInfo.link.setLayoutData(new GridData(GridData.FILL_HORIZONTAL));
             }
         }
 
         {
             // Filters
-            Composite vmGroup = UIUtils.createControlGroup(
+            Composite vmGroup = UIUtils.createTitledComposite(
                 refsGroup,
                 "Virtual model",
                 1, GridData.VERTICAL_ALIGN_BEGINNING | GridData.HORIZONTAL_ALIGN_BEGINNING, 0);
@@ -438,73 +454,66 @@ public class ConnectionPageGeneral extends ConnectionWizardPage implements Navig
                 "Reset configuration",
                 null,
                 "Delete all colorings, transformers and virtual table constraints for all tables in this data source",
-                new SelectionAdapter() {
-                    @Override
-                    public void widgetSelected(SelectionEvent e) {
-                        if (UIUtils.confirmAction(
-                            getShell(),
-                            "Reset virtual model settings",
-                            "You are about to reset all virtual model configuration.\n It includes:\n" +
-                                "\t- All virtual constraints and foreign keys\n" +
-                                "\t- All column transformers\n" +
-                                "\t- All table row colorings"
-                            )
-                        ) {
-                            dataSourceDescriptor.getVirtualModel().resetData();
-                            DataSourceDescriptor originalDataSource = getWizard().getOriginalDataSource();
+                SelectionListener.widgetSelectedAdapter(e -> {
+                    if (UIUtils.confirmAction(
+                        getShell(),
+                        "Reset virtual model settings",
+                        """
+                            You are about to reset all virtual model configuration.
+                             It includes:
+                            \t- All virtual constraints and foreign keys
+                            \t- All column transformers
+                            \t- All table row colorings"""
+                    )
+                    ) {
+                        dataSourceDescriptor.getVirtualModel().resetData();
+                        DataSourceDescriptor originalDataSource = getWizard().getOriginalDataSource();
+                        if (originalDataSource != null) {
                             originalDataSource.getVirtualModel().resetData();
                             originalDataSource.persistConfiguration();
                         }
                     }
-                });
+                }));
             resetVM.setEnabled(dataSourceDescriptor != null && dataSourceDescriptor.getVirtualModel().hasValuableData());
 //            UIUtils.createInfoLabel(vmGroup, "Virtual model is a logical database structure on the client side (not in a real database).\n" +
 //                "It also contains information about\nrow coloring and columns transformations", GridData.FILL_HORIZONTAL, 1);
         }
 
-        {
-            Composite linkGroup = UIUtils.createComposite(refsGroup, 1);
-            gd = new GridData(GridData.HORIZONTAL_ALIGN_BEGINNING);
-            gd.horizontalSpan = 3;
-            linkGroup.setLayoutData(gd);
+        if (getWizard().isNew()) {
+            Composite linkGroup = UIUtils.createComposite(group, 1);
 
-            Link initConfigLink = new Link(linkGroup, SWT.NONE);
-            initConfigLink.setText("<a>" + CoreMessages.dialog_connection_wizard_connection_init_description + "</a>");
-            initConfigLink.addSelectionListener(new SelectionAdapter() {
-                @Override
-                public void widgetSelected(SelectionEvent e) {
-                    if (getWizard().isNew()) {
-                        DataSourceDescriptor dataSource = getActiveDataSource();
-                        EditWizardPageDialog dialog = new EditWizardPageDialog(
-                            getWizard(),
-                            new ConnectionPageInitialization(dataSource),
-                            dataSource);
-                        dialog.open();
-                    } else {
-                        getWizard().openSettingsPage(ConnectionPageInitialization.PAGE_NAME);
-                    }
-                }
-            });
-            initConfigLink.setLayoutData(new GridData(GridData.HORIZONTAL_ALIGN_BEGINNING));
+            // Fill all the space so links are bottom-aligned
+            GridDataFactory.fillDefaults()
+                .align(SWT.BEGINNING, SWT.END)
+                .grab(true, true)
+                .applyTo(linkGroup);
 
-            Link shellConfigLink = new Link(linkGroup, SWT.NONE);
-            shellConfigLink.setText("<a>" + CoreMessages.dialog_connection_edit_wizard_shell_cmd + "</a>");
-            shellConfigLink.addSelectionListener(new SelectionAdapter() {
-                @Override
-                public void widgetSelected(SelectionEvent e) {
-                    if (getWizard().isNew()) {
-                        DataSourceDescriptor dataSource = getActiveDataSource();
-                        EditWizardPageDialog dialog = new EditWizardPageDialog(
-                            getWizard(),
-                            new ConnectionPageShellCommands(dataSource),
-                            dataSource);
-                        dialog.open();
-                    } else {
-                        getWizard().openSettingsPage(ConnectionPageShellCommands.PAGE_NAME);
-                    }
-                }
-            });
-            shellConfigLink.setLayoutData(new GridData(GridData.HORIZONTAL_ALIGN_BEGINNING));
+            {
+                Link initConfigLink = new Link(linkGroup, SWT.NONE);
+                initConfigLink.setText("<a>" + CoreMessages.dialog_connection_wizard_connection_init_description + "</a>");
+                initConfigLink.addSelectionListener(SelectionListener.widgetSelectedAdapter(selectionEvent -> {
+                    DataSourceDescriptor dataSource = getActiveDataSource();
+                    EditWizardPageDialog dialog = new EditWizardPageDialog(
+                        getWizard(),
+                        new ConnectionPageInitialization(dataSource),
+                        dataSource);
+                    dialog.open();
+                }));
+                initConfigLink.setLayoutData(new GridData(GridData.HORIZONTAL_ALIGN_BEGINNING));
+
+                Link shellConfigLink = new Link(linkGroup, SWT.NONE);
+                shellConfigLink.setText("<a>" + CoreMessages.dialog_connection_edit_wizard_shell_cmd + "</a>");
+                shellConfigLink.addSelectionListener(SelectionListener.widgetSelectedAdapter(selectionEvent -> {
+                    DataSourceDescriptor dataSource = getActiveDataSource();
+                    EditWizardPageDialog dialog = new EditWizardPageDialog(
+                        getWizard(),
+                        new ConnectionPageShellCommands(dataSource),
+                        dataSource
+                    );
+                    dialog.open();
+                }));
+                shellConfigLink.setLayoutData(new GridData(GridData.HORIZONTAL_ALIGN_BEGINNING));
+            }
         }
 
         setControl(group);
@@ -512,7 +521,11 @@ public class ConnectionPageGeneral extends ConnectionWizardPage implements Navig
         UIUtils.setHelp(group, IHelpContextIds.CTX_CON_WIZARD_FINAL);
     }
 
-    public static Combo createNavigatorSettingsCombo(Composite composite, NavigatorSettingsStorage settingsStorage, DBPDataSourceContainer dataSourceDescriptor) {
+    public static Combo createNavigatorSettingsCombo(
+        Composite composite,
+        NavigatorSettingsStorage settingsStorage,
+        DBPDataSourceContainer dataSourceDescriptor
+    ) {
         UIUtils.createControlLabel(composite, CoreMessages.dialog_connection_wizard_final_label_navigator_settings);
 
         Composite ctGroup = UIUtils.createComposite(composite, 2);
@@ -524,28 +537,30 @@ public class ConnectionPageGeneral extends ConnectionWizardPage implements Navig
             navigatorSettingsCombo.add(ncPresetName);
         }
         navigatorSettingsCombo.select(0);
-        navigatorSettingsCombo.addSelectionListener(new SelectionAdapter() {
-            @Override
-            public void widgetSelected(SelectionEvent e) {
-                if (navigatorSettingsCombo.getSelectionIndex() == navigatorSettingsCombo.getItemCount() - 1) {
-                    // Custom - no changes
-                } else {
-                    DataSourceNavigatorSettings.Preset newSettings = DataSourceNavigatorSettings.PRESETS.get(navigatorSettingsCombo.getText());
-                    if (newSettings == null) {
-                        throw new IllegalStateException("Invalid preset name: " + navigatorSettingsCombo.getText());
-                    }
-                    settingsStorage.setNavigatorSettings(newSettings.getSettings());
+        navigatorSettingsCombo.addSelectionListener(SelectionListener.widgetSelectedAdapter(selectionEvent -> {
+            if (navigatorSettingsCombo.getSelectionIndex() == navigatorSettingsCombo.getItemCount() - 1) {
+                // Custom - no changes
+            } else {
+                DataSourceNavigatorSettings.Preset newSettings = DataSourceNavigatorSettings.PRESETS.get(navigatorSettingsCombo.getText());
+                if (newSettings == null) {
+                    throw new IllegalStateException("Invalid preset name: " + navigatorSettingsCombo.getText());
                 }
+                settingsStorage.setNavigatorSettings(newSettings.getSettings());
             }
-        });
+        }));
 
-        UIUtils.createDialogButton(ctGroup, CoreMessages.dialog_connection_wizard_final_label_navigator_settings_customize, new SelectionAdapter() {
-            @Override
-            public void widgetSelected(SelectionEvent e) {
+        UIUtils.createPushButton(
+            ctGroup,
+            null,
+            CoreMessages.dialog_connection_wizard_final_label_navigator_settings_customize,
+            UIIcon.CONFIGURATION,
+            SelectionListener.widgetSelectedAdapter(e ->
                 settingsStorage.setNavigatorSettings(
-                    editNavigatorSettings(navigatorSettingsCombo, settingsStorage.getNavigatorSettings(), dataSourceDescriptor));
-            }
-        });
+                    editNavigatorSettings(
+                        navigatorSettingsCombo,
+                        settingsStorage.getNavigatorSettings(),
+                        dataSourceDescriptor
+                    ))));
         return navigatorSettingsCombo;
     }
 
@@ -554,7 +569,11 @@ public class ConnectionPageGeneral extends ConnectionWizardPage implements Navig
 
         Composite ctGroup = UIUtils.createComposite(composite, 1);
 
-        CSmartCombo<DBPConnectionType> connectionTypeCombo = new CSmartCombo<>(ctGroup, SWT.BORDER | SWT.DROP_DOWN | SWT.READ_ONLY, new ConnectionTypeLabelProvider());
+        CSmartCombo<DBPConnectionType> connectionTypeCombo = new CSmartCombo<>(
+            ctGroup,
+            SWT.BORDER | SWT.DROP_DOWN | SWT.READ_ONLY,
+            new ConnectionTypeLabelProvider()
+        );
         loadConnectionTypes(connectionTypeCombo);
         setConnectionType(connectionTypeCombo, DBPConnectionType.getDefaultConnectionType());
         connectionTypeCombo.select(DBPConnectionType.getDefaultConnectionType());
@@ -588,13 +607,16 @@ public class ConnectionPageGeneral extends ConnectionWizardPage implements Navig
     }
 
     public static void setConnectionType(@NotNull CSmartCombo<DBPConnectionType> combo, @NotNull DBPConnectionType connectionType) {
-        for (int i = 0; i < combo.getItemCount(); i++) {
-            final DBPConnectionType item = combo.getItem(i);
-            if (item.getId().equals(connectionType.getId())) {
-                combo.select(i);
-                return;
+        // Run in async to set custom background in dark theme
+        UIUtils.asyncExec(() -> {
+            for (int i = 0; i < combo.getItemCount(); i++) {
+                final DBPConnectionType item = combo.getItem(i);
+                if (item.getId().equals(connectionType.getId())) {
+                    combo.select(i);
+                    return;
+                }
             }
-        }
+        });
     }
 
     public static void loadConnectionTypes(CSmartCombo <DBPConnectionType> connectionTypeCombo) {
@@ -611,12 +633,9 @@ public class ConnectionPageGeneral extends ConnectionWizardPage implements Navig
     }
 
     @Override
-    public void saveSettings(DBPDataSourceContainer dataSource) {
+    public void saveSettings(@NotNull DBPDataSourceContainer dataSource) {
         if (dataSourceDescriptor != null && !activated) {
             // No changes anyway
-            return;
-        }
-        if (dataSource == null) {
             return;
         }
         final DBPConnectionConfiguration confConfig = dataSource.getConnectionConfiguration();
@@ -671,7 +690,7 @@ public class ConnectionPageGeneral extends ConnectionWizardPage implements Navig
         }
     }
 
-    public void setDataSourceFolder(DBPDataSourceFolder dataSourceFolder) {
+    public void setDataSourceFolder(@Nullable DBPDataSourceFolder dataSourceFolder) {
         this.curDataSourceFolder = dataSourceFolder;
     }
 
