@@ -26,7 +26,6 @@ import org.eclipse.jface.action.IContributionManager;
 import org.eclipse.jface.action.ToolBarManager;
 import org.eclipse.jface.layout.GridDataFactory;
 import org.eclipse.swt.SWT;
-import org.eclipse.swt.custom.CLabel;
 import org.eclipse.swt.events.KeyAdapter;
 import org.eclipse.swt.events.KeyEvent;
 import org.eclipse.swt.events.SelectionAdapter;
@@ -43,31 +42,31 @@ import org.eclipse.ui.PlatformUI;
 import org.eclipse.ui.part.MultiPageEditorSite;
 import org.eclipse.ui.progress.UIJob;
 import org.eclipse.ui.texteditor.IWorkbenchActionDefinitionIds;
+import org.jkiss.code.NotNull;
 import org.jkiss.dbeaver.Log;
 import org.jkiss.dbeaver.model.runtime.DBRProgressMonitor;
 import org.jkiss.dbeaver.model.runtime.ProxyProgressMonitor;
 import org.jkiss.dbeaver.model.runtime.load.ILoadVisualizer;
 import org.jkiss.dbeaver.ui.*;
 import org.jkiss.dbeaver.ui.css.CSSUtils;
-import org.jkiss.dbeaver.ui.css.DBStyles;
 import org.jkiss.dbeaver.ui.internal.UIMessages;
 import org.jkiss.utils.CommonUtils;
 
 import java.util.ArrayList;
+import java.util.Objects;
 
 /**
  * ProgressPageControl
  */
-public class ProgressPageControl extends Composite implements ISearchContextProvider, ICustomActionsProvider
-{
+public class ProgressPageControl extends ConComposite implements ISearchContextProvider, ICustomActionsProvider {
     private static final Log log = Log.getLog(ProgressPageControl.class);
 
-    private final static int PROGRESS_MIN = 0;
-    private final static int PROGRESS_MAX = 20;
+    private static final int PROGRESS_MIN = 0;
+    private static final int PROGRESS_MAX = 20;
 
     private boolean showDivider;
 
-    private CLabel listInfoLabel;
+    private Label listInfoLabel;
 
     private ProgressBar progressBar;
     private Text searchText;
@@ -75,13 +74,13 @@ public class ProgressPageControl extends Composite implements ISearchContextProv
     private int loadCount = 0;
     private ProgressPageControl ownerPageControl = null;
     private ProgressPageControl childPageControl = null;
-    private Composite searchControlsComposite;
+    private ConComposite searchControlsComposite;
 
     private String curInfo;
     private String curSearchText;
     private volatile Job curSearchJob;
 
-    private Color searchNotFoundColor;
+    private final Color searchNotFoundColor;
     private ToolBarManager defaultToolbarManager;
     private ToolBarManager searchToolbarManager;
     private ToolBarManager customToolbarManager;
@@ -90,8 +89,8 @@ public class ProgressPageControl extends Composite implements ISearchContextProv
 
     public ProgressPageControl(
         Composite parent,
-        int style)
-    {
+        int style
+    ) {
         super(parent, style);
         GridLayout layout = new GridLayout(1, false);
         if ((style & SWT.SHEET) != 0) {
@@ -100,26 +99,21 @@ public class ProgressPageControl extends Composite implements ISearchContextProv
             layout.verticalSpacing = 0;
             layout.horizontalSpacing = 0;
         }
-        //layout.horizontalSpacing = 0;
-        //layout.verticalSpacing = 0;
         this.setLayout(layout);
         addDisposeListener(e -> disposeControl());
         searchNotFoundColor = UIStyles.getDefaultWidgetBackground();
     }
 
     @Override
-    public GridLayout getLayout()
-    {
-        return (GridLayout)super.getLayout();
+    public GridLayout getLayout() {
+        return (GridLayout) super.getLayout();
     }
 
-    public void setShowDivider(boolean showDivider)
-    {
+    public void setShowDivider(boolean showDivider) {
         this.showDivider = showDivider;
     }
 
-    public void setInfo(String info)
-    {
+    public void setInfo(String info) {
         if (!CommonUtils.isEmpty(info)) {
             this.curInfo = info;
         }
@@ -132,13 +126,7 @@ public class ProgressPageControl extends Composite implements ISearchContextProv
         }
     }
 
-    public final Composite createProgressPanel()
-    {
-        return createProgressPanel(this);
-    }
-
-    public final void substituteProgressPanel(ProgressPageControl externalPageControl)
-    {
+    public final void substituteProgressPanel(ProgressPageControl externalPageControl) {
         this.ownerPageControl = externalPageControl;
         if (this.ownerPageControl != null) {
             this.ownerPageControl.setChildControl(this);
@@ -156,31 +144,26 @@ public class ProgressPageControl extends Composite implements ISearchContextProv
     }
 
     private ProgressPageControl findOwnerPageControl(IWorkbenchPartSite site) {
-        if (site instanceof INestedEditorSite && ((INestedEditorSite) site).getFolderEditor() instanceof IProgressControlProvider) {
-            return ((IProgressControlProvider)((INestedEditorSite) site).getFolderEditor()).getProgressControl();
-        } else if (site instanceof MultiPageEditorSite && ((MultiPageEditorSite) site).getMultiPageEditor() instanceof IProgressControlProvider) {
-            return ((IProgressControlProvider)((MultiPageEditorSite) site).getMultiPageEditor()).getProgressControl();
+        if (site instanceof INestedEditorSite nes && nes.getFolderEditor() instanceof IProgressControlProvider pcp) {
+            return pcp.getProgressControl();
+        } else if (site instanceof MultiPageEditorSite mpe && mpe.getMultiPageEditor() instanceof IProgressControlProvider pcp) {
+            return pcp.getProgressControl();
         } else {
             return null;
         }
     }
 
-    private void setChildControl(ProgressPageControl progressPageControl)
-    {
+    private void setChildControl(ProgressPageControl progressPageControl) {
         if (progressPageControl == this.childPageControl) {
             return;
         }
-//        if (this.childPageControl != null && progressPageControl != null) {
-//            log.warn("Overwrite of child page control '" + this.childPageControl); //$NON-NLS-1$
-//        }
         this.childPageControl = progressPageControl;
         if (getProgressControl().progressBar == null) {
             hideControls(true);
         }
     }
 
-    private ProgressPageControl getProgressControl()
-    {
+    private ProgressPageControl getProgressControl() {
         return ownerPageControl != null ? ownerPageControl : this;
     }
 
@@ -188,9 +171,8 @@ public class ProgressPageControl extends Composite implements ISearchContextProv
         return searchText;
     }
 
-    public Composite createContentContainer()
-    {
-        Composite container = new Composite(this, (getStyle() & SWT.SHEET) == SWT.SHEET ? SWT.NONE :  SWT.BORDER);
+    public Composite createContentContainer() {
+        Composite container = new ConComposite(this, (getStyle() & SWT.SHEET) == SWT.SHEET ? SWT.NONE : SWT.BORDER);
         container.setLayout(new FillLayout());
         GridData gd = new GridData(GridData.FILL_BOTH);
         gd.horizontalIndent = 0;
@@ -200,8 +182,11 @@ public class ProgressPageControl extends Composite implements ISearchContextProv
         return container;
     }
 
-    public Composite createProgressPanel(Composite container)
-    {
+    public final Composite createProgressPanel() {
+        return createProgressPanel(this);
+    }
+
+    public Composite createProgressPanel(Composite container) {
         if (this.ownerPageControl != null) {
             throw new IllegalStateException("Can't create page control while substitution control already set"); //$NON-NLS-1$
         }
@@ -210,14 +195,14 @@ public class ProgressPageControl extends Composite implements ISearchContextProv
             GridData gd = new GridData(GridData.FILL_HORIZONTAL);
             gd.heightHint = 1;
             separator.setLayoutData(gd);
-            separator.addPaintListener(e ->  {
+            separator.addPaintListener(e -> {
                 e.gc.setForeground(e.display.getSystemColor(SWT.COLOR_WIDGET_NORMAL_SHADOW));
                 e.gc.drawLine(e.x, e.y, e.x + e.width, e.y);
             });
         }
 
-        Composite infoGroup = new Composite(container, SWT.NONE);
-        CSSUtils.setCSSClass(infoGroup, DBStyles.COLORED_BY_CONNECTION_TYPE);
+        Composite infoGroup = new ConComposite(container, SWT.NONE);
+        CSSUtils.markConnectionTypeColor(infoGroup);
         infoGroup.setBackgroundMode(SWT.INHERIT_FORCE);
 
         infoGroup.setLayoutData(new GridData(GridData.FILL_HORIZONTAL));
@@ -226,9 +211,9 @@ public class ProgressPageControl extends Composite implements ISearchContextProv
         gl.marginWidth = 0;
         infoGroup.setLayout(gl);
 
-        customControlsComposite = new Composite(infoGroup, SWT.NONE);
+        customControlsComposite = new ConComposite(infoGroup, SWT.NONE);
         customControlsComposite.setLayoutData(new GridData(GridData.HORIZONTAL_ALIGN_END));
-        CSSUtils.setCSSClass(customControlsComposite, DBStyles.COLORED_BY_CONNECTION_TYPE);
+        CSSUtils.markConnectionTypeColor(customControlsComposite);
         customControlsComposite.setBackgroundMode(SWT.INHERIT_FORCE);
 
         gl = new GridLayout(1, false);
@@ -236,17 +221,19 @@ public class ProgressPageControl extends Composite implements ISearchContextProv
         gl.marginWidth = 0;
         customControlsComposite.setLayout(gl);
 
-        listInfoLabel = new CLabel(infoGroup, SWT.NONE);
+        listInfoLabel = new Label(infoGroup, SWT.NONE);
         listInfoLabel.setImage(DBeaverIcons.getImage(UIIcon.SEPARATOR_V));
         listInfoLabel.setLayoutData(GridDataFactory.swtDefaults().minSize(100, SWT.DEFAULT).create());
+        CSSUtils.markConnectionTypeColor(listInfoLabel);
 
-        searchControlsComposite = UIUtils.createPlaceholder(infoGroup, 1);
+        searchControlsComposite = new ConComposite(infoGroup);
+        searchControlsComposite.setGridLayout(1);
         searchControlsComposite.setLayoutData(new GridData(GridData.FILL_HORIZONTAL));
-        CSSUtils.setCSSClass(searchControlsComposite, DBStyles.COLORED_BY_CONNECTION_TYPE);
         searchControlsComposite.setBackgroundMode(SWT.INHERIT_FORCE);
 
         // Placeholder toolbar (need to set initial height of search composite)
-        new ToolBar(searchControlsComposite, SWT.NONE);
+        ToolBar phToolBar = new ToolBar(searchControlsComposite, SWT.NONE);
+        CSSUtils.markConnectionTypeColor(phToolBar);
 
         defaultToolbarManager = new ToolBarManager(SWT.FLAT | SWT.HORIZONTAL | SWT.RIGHT);
         customToolbarManager = new ToolBarManager(SWT.FLAT | SWT.HORIZONTAL | SWT.RIGHT);
@@ -272,8 +259,7 @@ public class ProgressPageControl extends Composite implements ISearchContextProv
         UIUtils.updateContributionItems(customToolbarManager);
     }
 
-    private void hideControls(boolean showDefaultControls)
-    {
+    private void hideControls(boolean showDefaultControls) {
         if (searchControlsComposite == null || searchControlsComposite.isDisposed()) {
             return;
         }
@@ -288,17 +274,18 @@ public class ProgressPageControl extends Composite implements ISearchContextProv
 
             // Create default controls toolbar
             if (showDefaultControls) {
-                ((GridLayout)searchControlsComposite.getLayout()).numColumns = 2;
-                ((GridLayout)searchControlsComposite.getLayout()).marginTop = 2;
+                ((GridLayout) searchControlsComposite.getLayout()).numColumns = 2;
+                ((GridLayout) searchControlsComposite.getLayout()).marginTop = 2;
                 defaultToolbarManager.removeAll();
                 if (isSearchPossible() && isSearchEnabled()) {
                     addSearchAction(defaultToolbarManager);
                 }
-                Label phLabel = new Label(searchControlsComposite, SWT.NONE);
-                phLabel.setText(""); //$NON-NLS-1$
+                Control phLabel = new Label(searchControlsComposite, SWT.NONE);
                 phLabel.setLayoutData(new GridData(GridData.FILL_HORIZONTAL));
+                CSSUtils.markConnectionTypeColor(phLabel);
                 ToolBar defaultToolbar = defaultToolbarManager.createControl(searchControlsComposite);
                 defaultToolbar.setLayoutData(new GridData(GridData.FILL_HORIZONTAL | GridData.HORIZONTAL_ALIGN_END));
+                CSSUtils.markConnectionTypeColor(defaultToolbar);
 
                 // Recreate custom controls
                 UIUtils.disposeChildControls(customControlsComposite);
@@ -307,7 +294,7 @@ public class ProgressPageControl extends Composite implements ISearchContextProv
                 fillCustomActions(customToolbarManager);
                 if (!customToolbarManager.isEmpty()) {
                     ToolBar toolbar = customToolbarManager.createControl(customControlsComposite);
-                    CSSUtils.setCSSClass(toolbar, DBStyles.COLORED_BY_CONNECTION_TYPE);
+                    CSSUtils.markConnectionTypeColor(toolbar);
                     toolbar.setFont(BaseThemeSettings.instance.baseFont);
                     toolbar.setLayoutData(new GridData(GridData.FILL_HORIZONTAL | GridData.HORIZONTAL_ALIGN_END));
                     populateCustomActions(customToolbarManager);
@@ -330,16 +317,16 @@ public class ProgressPageControl extends Composite implements ISearchContextProv
             PlatformUI.getWorkbench(),
             IWorkbenchCommandConstants.EDIT_FIND_AND_REPLACE,
             UIMessages.controls_progress_page_toolbar_title,
-            UIIcon.SEARCH));
+            UIIcon.SEARCH
+        ));
     }
 
-    private void createProgressControls()
-    {
+    private void createProgressControls() {
         if (progressBar != null || customControlsComposite == null) {
             return;
         }
         hideControls(false);
-        ((GridLayout)searchControlsComposite.getLayout()).numColumns = 2;
+        ((GridLayout) searchControlsComposite.getLayout()).numColumns = 2;
         progressBar = new ProgressBar(searchControlsComposite, SWT.SMOOTH | SWT.HORIZONTAL);
         progressBar.setSize(300, 16);
         progressBar.setState(SWT.NORMAL);
@@ -354,8 +341,7 @@ public class ProgressPageControl extends Composite implements ISearchContextProv
         stopButton.setToolTipText(UIMessages.controls_progress_page_progress_bar_cancel_tooltip);
         stopButton.addSelectionListener(new SelectionAdapter() {
             @Override
-            public void widgetSelected(SelectionEvent e)
-            {
+            public void widgetSelected(SelectionEvent e) {
                 // Cancel current job
                 if (cancelProgress()) {
                     if (!stopButton.isDisposed()) {
@@ -368,13 +354,12 @@ public class ProgressPageControl extends Composite implements ISearchContextProv
         searchControlsComposite.getParent().layout();
     }
 
-    protected void createSearchControls()
-    {
+    protected void createSearchControls() {
         if (searchText != null) {
             return;
         }
         hideControls(false);
-        ((GridLayout)searchControlsComposite.getLayout()).numColumns = 2;
+        ((GridLayout) searchControlsComposite.getLayout()).numColumns = 2;
 
         searchControlsComposite.getParent().setRedraw(false);
         try {
@@ -410,19 +395,21 @@ public class ProgressPageControl extends Composite implements ISearchContextProv
             });
             searchText.addModifyListener(e -> {
                 curSearchText = searchText.getText();
-                if (curSearchJob == null) {
-                    curSearchJob = new UIJob(UIMessages.controls_progress_page_job_search) {
-                        @Override
-                        public IStatus runInUIThread(IProgressMonitor monitor) {
-                            if (monitor.isCanceled()) {
-                                return Status.CANCEL_STATUS;
+                synchronized (this) {
+                    if (curSearchJob == null) {
+                        curSearchJob = new UIJob(UIMessages.controls_progress_page_job_search) {
+                            @Override
+                            public IStatus runInUIThread(IProgressMonitor monitor) {
+                                if (monitor.isCanceled()) {
+                                    return Status.CANCEL_STATUS;
+                                }
+                                performSearch(SearchType.NEXT);
+                                curSearchJob = null;
+                                return Status.OK_STATUS;
                             }
-                            performSearch(SearchType.NEXT);
-                            curSearchJob = null;
-                            return Status.OK_STATUS;
-                        }
-                    };
-                    curSearchJob.schedule(200);
+                        };
+                        curSearchJob.schedule(200);
+                    }
                 }
             });
 
@@ -430,16 +417,21 @@ public class ProgressPageControl extends Composite implements ISearchContextProv
             if (searchToolbarManager == null) {
                 searchToolbarManager = new ToolBarManager(SWT.FLAT | SWT.HORIZONTAL);
                 searchToolbarManager.add(ActionUtils.makeCommandContribution(
-                        PlatformUI.getWorkbench(),
-                        IWorkbenchActionDefinitionIds.FIND_PREVIOUS,
-                        null,
-                        UIIcon.ARROW_UP));
+                    PlatformUI.getWorkbench(),
+                    IWorkbenchActionDefinitionIds.FIND_PREVIOUS,
+                    null,
+                    UIIcon.ARROW_UP
+                ));
                 searchToolbarManager.add(ActionUtils.makeCommandContribution(
-                        PlatformUI.getWorkbench(),
-                        IWorkbenchActionDefinitionIds.FIND_NEXT,
-                        null,
-                        UIIcon.ARROW_DOWN));
-                searchToolbarManager.add(new Action(UIMessages.controls_progress_page_action_close, UIUtils.getShardImageDescriptor(ISharedImages.IMG_ELCL_REMOVE)) {
+                    PlatformUI.getWorkbench(),
+                    IWorkbenchActionDefinitionIds.FIND_NEXT,
+                    null,
+                    UIIcon.ARROW_DOWN
+                ));
+                searchToolbarManager.add(new Action(
+                    UIMessages.controls_progress_page_action_close,
+                    UIUtils.getShardImageDescriptor(ISharedImages.IMG_ELCL_REMOVE)
+                ) {
                     @Override
                     public void run() {
                         cancelSearch(true);
@@ -454,8 +446,7 @@ public class ProgressPageControl extends Composite implements ISearchContextProv
         }
     }
 
-    public void disposeControl()
-    {
+    public void disposeControl() {
         if (searchToolbarManager != null) {
             searchToolbarManager.dispose();
             searchToolbarManager = null;
@@ -470,13 +461,11 @@ public class ProgressPageControl extends Composite implements ISearchContextProv
         }
     }
 
-    protected boolean cancelProgress()
-    {
+    protected boolean cancelProgress() {
         return false;
     }
 
-    protected ISearchExecutor getSearchRunner()
-    {
+    protected ISearchExecutor getSearchRunner() {
         if (childPageControl != null) {
             return childPageControl.getSearchRunner();
         }
@@ -484,31 +473,28 @@ public class ProgressPageControl extends Composite implements ISearchContextProv
     }
 
     @Override
-    public boolean isSearchPossible()
-    {
+    public boolean isSearchPossible() {
         return getSearchRunner() != null;
     }
 
     @Override
-    public boolean isSearchEnabled()
-    {
+    public boolean isSearchEnabled() {
         return getProgressControl().progressBar == null;
     }
 
     @Override
-    public boolean performSearch(SearchType searchType)
-    {
+    public boolean performSearch(SearchType searchType) {
         return performSearch(searchType, true);
     }
 
     /**
      * Create search controls and perform search according to the searchType
-     * @param searchType is a type of search
+     *
+     * @param searchType             is a type of search
      * @param isSetFocusToSearchText defines if focus should be set to the search text area if searchType is {@link SearchType#NONE}
      * @return operation success indicator
      */
-    public boolean performSearch(SearchType searchType, boolean isSetFocusToSearchText)
-    {
+    public boolean performSearch(SearchType searchType, boolean isSetFocusToSearchText) {
         getProgressControl().createSearchControls();
         if (searchType == SearchType.NONE && isSetFocusToSearchText) {
             getProgressControl().searchText.setFocus();
@@ -529,9 +515,8 @@ public class ProgressPageControl extends Composite implements ISearchContextProv
         }
     }
 
-    
-    private void cancelSearch(boolean hide)
-    {
+
+    private void cancelSearch(boolean hide) {
         if (curSearchJob != null) {
             curSearchJob.cancel();
             curSearchJob = null;
@@ -552,49 +537,21 @@ public class ProgressPageControl extends Composite implements ISearchContextProv
         getProgressControl().hideControls(true);
     }
 
-    public void activate(boolean active)
-    {
+    public void activate(boolean active) {
         if (active) {
-            if (curInfo != null) {
-                setInfo(curInfo);
-            } else {
-                setInfo("");
-            }
+            setInfo(Objects.requireNonNullElse(curInfo, ""));
             if (this.ownerPageControl != null) {
                 this.ownerPageControl.setChildControl(this);
             }
         }
     }
 
-/*
-    public void run(boolean fork, boolean cancelable, final IRunnableWithProgress runnable) throws InvocationTargetException, InterruptedException
-    {
-        Job job = new Job("Progress") {
-            @Override
-            protected IStatus run(IProgressMonitor monitor)
-            {
-                try {
-                    runnable.run(monitor);
-                } catch (InvocationTargetException e) {
-                    return RuntimeUtils.makeExceptionStatus(e.getTargetException());
-                } catch (InterruptedException e) {
-                    // do nothing
-                }
-                return Status.OK_STATUS;
-            }
-        };
-        job.schedule();
-        job.join();
-    }
-*/
-
     private static class TaskInfo {
         final String name;
         final int totalWork;
         int progress;
 
-        private TaskInfo(String name, int totalWork)
-        {
+        private TaskInfo(String name, int totalWork) {
             this.name = name;
             this.totalWork = totalWork;
         }
@@ -607,12 +564,10 @@ public class ProgressPageControl extends Composite implements ISearchContextProv
         private final java.util.List<TaskInfo> tasksRunning = new ArrayList<>();
 
         @Override
-        public DBRProgressMonitor overwriteMonitor(final DBRProgressMonitor monitor)
-        {
+        public DBRProgressMonitor overwriteMonitor(final DBRProgressMonitor monitor) {
             return new ProxyProgressMonitor(monitor) {
                 @Override
-                public void beginTask(final String name, int totalWork)
-                {
+                public void beginTask(@NotNull final String name, int totalWork) {
                     super.beginTask(name, totalWork);
                     curStatus = name;
                     synchronized (tasksRunning) {
@@ -621,41 +576,37 @@ public class ProgressPageControl extends Composite implements ISearchContextProv
                 }
 
                 @Override
-                public void done()
-                {
+                public void done() {
                     super.done();
                     curStatus = ""; //$NON-NLS-1$
                     synchronized (tasksRunning) {
                         if (tasksRunning.isEmpty()) {
                             log.warn("Task end when no tasks are running"); //$NON-NLS-1$
                         } else {
-                            tasksRunning.remove(tasksRunning.size() - 1);
+                            tasksRunning.removeLast();
                         }
                     }
                 }
 
                 @Override
-                public void subTask(String name)
-                {
+                public void subTask(@NotNull String name) {
                     super.subTask(name);
                     curStatus = name;
                 }
 
                 @Override
-                public void worked(int work)
-                {
+                public void worked(int work) {
                     super.worked(work);
                     synchronized (tasksRunning) {
                         if (!tasksRunning.isEmpty()) {
-                            tasksRunning.get(tasksRunning.size() - 1).progress += work;
+                            tasksRunning.getLast().progress += work;
                         }
                     }
                 }
             };
         }
 
-        private TaskInfo getCurTaskInfo()
-        {
+        private TaskInfo getCurTaskInfo() {
             for (int i = tasksRunning.size() - 1; i >= 0; i--) {
                 if (tasksRunning.get(i).totalWork > 1) {
                     return tasksRunning.get(i);
@@ -665,14 +616,12 @@ public class ProgressPageControl extends Composite implements ISearchContextProv
         }
 
         @Override
-        public boolean isCompleted()
-        {
+        public boolean isCompleted() {
             return completed;
         }
 
         @Override
-        public void visualizeLoading()
-        {
+        public void visualizeLoading() {
             if (!getProgressControl().isDisposed()) {
                 getProgressControl().createProgressControls();
                 synchronized (tasksRunning) {
@@ -699,8 +648,7 @@ public class ProgressPageControl extends Composite implements ISearchContextProv
         }
 
         @Override
-        public void completeLoading(RESULT result)
-        {
+        public void completeLoading(RESULT result) {
             completed = true;
 
             if (ProgressPageControl.this.isDisposed()) {
